# CISIA_29062026

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  COMMANDES_PC_MAC.md  Dockerfile  Makefile  QCM_IA_relecture.md  README.md  README_COMMENTAIRES.md  docker-compose.yml  install_docker_macos.sh  install_docker_windows.ps1  metrics.json  mlflow.db  params.yaml  payload.json  pyproject.toml  run_j3_stack.ps1  run_j3_stack.sh
.dvc/: config
.github/workflows/: ci.yml
artifacts/models/: .gitignore  model_metadata.json  rf.joblib.dvc
data/gold/: .gitignore  README.md  gold_dataset.csv  gold_dataset.csv.dvc
data/raw/: README.md  capteurs_pression.tsv  machine.sql
data/sample/: capteurs_temperature.csv  releves_incidents.csv
mlruns/1/models/m-4921f635c34d4283962956ff0f9cdb21/artifacts/: MLmodel  conda.yaml  input_example.json  python_env.yaml  requirements.txt  serving_input_example.json
monitoring/: prometheus.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
scripts/: check_env_macos.sh  check_env_windows.ps1  demo_versioning.py  generate_synthetic_gold.py
src/indusense/: __init__.py  cli.py  config.py
src/indusense/api/: __init__.py  main.py  model_store.py  schemas.py  security.py
src/indusense/data/: __init__.py  loaders.py
src/indusense/features/: __init__.py  temporal.py
src/indusense/models/: __init__.py  tabular.py
tests/: test_api.py  test_loaders.py  test_package.py  test_security.py  test_temporal.py  test_temporal_gold.py
